feat: checkpoint & save MinIO
